// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalNavbar default 1`] = `
<DocumentFragment>
  <nav
    aria-label="Main Menu"
    class="navbar"
  >
    <h1
      class="h1 logo"
    >
      <a
        class="d-flex align-items-center"
        href="/search"
      >
        <brandlogo
          class="logo"
          variant="symbol"
        />
      </a>
    </h1>
    <hr
      aria-hidden="true"
      class="divider"
    />
    <div
      class="menu"
    >
      <button
        aria-label="Sections Navigation"
        class="btn menuButton"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="mdi-icon iconInline"
          fill="currentColor"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="mdi-icon iconInline"
          fill="currentColor"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
          />
        </svg>
      </button>
      <ul
        class="list menuClose"
      >
        <li
          class="item d-none d-md-flex position-relative"
        >
          <div
            class="link d-flex align-items-center p-0"
            data-test-active="false"
            data-test-id="/search"
          >
            <div
              class="h-100 d-flex linkContent navDropdownWrapper"
            >
              <a
                class="anchorLink navDropdownLink itemFocusable"
                href="/search"
              >
                <span
                  class="itemFocusableContent"
                >
                  <svg
                    aria-hidden="true"
                    class="mdi-icon mdi-icon iconInline icon"
                    fill="currentColor"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                  >
                    <path
                      d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
                    />
                  </svg>
                  <span
                    class="text iconIncluded"
                  >
                    Code Search
                  </span>
                </span>
              </a>
              <button
                aria-controls=""
                aria-haspopup="true"
                aria-label="Show search menu"
                class="btn navDropdownIconButton itemFocusable"
                data-reach-menu-button=""
                id="menu-button-2"
                type="button"
              >
                <span
                  class="itemFocusableContent"
                >
                  <svg
                    aria-hidden="true"
                    class="mdi-icon iconInline icon"
                    fill="currentColor"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                  >
                    <path
                      d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </li>
        <li
          class="item d-flex d-md-none"
        >
          <a
            class="link"
            href="/search"
          >
            <span
              class="linkContent"
            >
              <svg
                aria-hidden="true"
                class="mdi-icon mdi-icon iconInline icon"
                fill="currentColor"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
                />
              </svg>
              <span
                class="text iconIncluded"
              >
                Code Search
              </span>
            </span>
          </a>
        </li>
        <li
          class="item d-flex d-md-none"
        >
          <a
            class="link"
            href="/contexts"
          >
            <span
              class="linkContent pl-2"
            >
              <span
                class="text iconIncluded"
              >
                Contexts
              </span>
            </span>
          </a>
        </li>
      </ul>
    </div>
    <ul
      class="actions"
    >
      <li
        class="action"
      >
        <a
          class="anchorLink link"
          href="https://about.sourcegraph.com"
        >
          About 
          <span
            class="d-none d-sm-inline"
          >
            Sourcegraph
          </span>
        </a>
      </li>
      <li
        class="action"
      >
        <div>
          <a
            class="anchorLink btn btnOutlineSecondary btnSm mr-1"
            href="/sign-in"
          >
            Log in
          </a>
          <a
            class="anchorLink btn btnSm signUp"
            href="https://about.sourcegraph.com/get-started/self-hosted?utm_medium=inproduct&utm_source=nav&utm_campaign=inproduct-cta"
            tabindex="0"
          >
            Get started
          </a>
        </div>
      </li>
    </ul>
  </nav>
  <div
    class="w-100 px-3 pt-2"
  >
    <div
      class="pb-2 border-bottom"
    >
      <searchnavbaritem
        defaultsearchcontextspec=""
        extensionscontroller="[object Object]"
        history="[object Object]"
        location="[object Object]"
        platformcontext="[object Object]"
        routes=""
        selectedsearchcontextspec=""
        settingscascade="[object Object]"
        telemetryservice="[object Object]"
        themepreference="light"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`GlobalNavbar low-profile 1`] = `
<DocumentFragment>
  <nav
    aria-label="Main Menu"
    class="navbar"
  >
    <h1
      class="h1 logo"
    >
      <a
        class="d-flex align-items-center"
        href="/search"
      >
        <brandlogo
          class="logo"
          variant="symbol"
        />
      </a>
    </h1>
    <hr
      aria-hidden="true"
      class="divider"
    />
    <div
      class="menu"
    >
      <button
        aria-label="Sections Navigation"
        class="btn menuButton"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="mdi-icon iconInline"
          fill="currentColor"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z"
          />
        </svg>
        <svg
          aria-hidden="true"
          class="mdi-icon iconInline"
          fill="currentColor"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
          />
        </svg>
      </button>
      <ul
        class="list menuClose"
      >
        <li
          class="item d-none d-md-flex position-relative"
        >
          <div
            class="link d-flex align-items-center p-0"
            data-test-active="false"
            data-test-id="/search"
          >
            <div
              class="h-100 d-flex linkContent navDropdownWrapper"
            >
              <a
                class="anchorLink navDropdownLink itemFocusable"
                href="/search"
              >
                <span
                  class="itemFocusableContent"
                >
                  <svg
                    aria-hidden="true"
                    class="mdi-icon mdi-icon iconInline icon"
                    fill="currentColor"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                  >
                    <path
                      d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
                    />
                  </svg>
                  <span
                    class="text iconIncluded"
                  >
                    Code Search
                  </span>
                </span>
              </a>
              <button
                aria-controls=""
                aria-haspopup="true"
                aria-label="Show search menu"
                class="btn navDropdownIconButton itemFocusable"
                data-reach-menu-button=""
                id="menu-button-4"
                type="button"
              >
                <span
                  class="itemFocusableContent"
                >
                  <svg
                    aria-hidden="true"
                    class="mdi-icon iconInline icon"
                    fill="currentColor"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                  >
                    <path
                      d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </li>
        <li
          class="item d-flex d-md-none"
        >
          <a
            class="link"
            href="/search"
          >
            <span
              class="linkContent"
            >
              <svg
                aria-hidden="true"
                class="mdi-icon mdi-icon iconInline icon"
                fill="currentColor"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
                />
              </svg>
              <span
                class="text iconIncluded"
              >
                Code Search
              </span>
            </span>
          </a>
        </li>
        <li
          class="item d-flex d-md-none"
        >
          <a
            class="link"
            href="/contexts"
          >
            <span
              class="linkContent pl-2"
            >
              <span
                class="text iconIncluded"
              >
                Contexts
              </span>
            </span>
          </a>
        </li>
      </ul>
    </div>
    <ul
      class="actions"
    >
      <li
        class="action"
      >
        <a
          class="anchorLink link"
          href="https://about.sourcegraph.com"
        >
          About 
          <span
            class="d-none d-sm-inline"
          >
            Sourcegraph
          </span>
        </a>
      </li>
      <li
        class="action"
      >
        <div>
          <a
            class="anchorLink btn btnOutlineSecondary btnSm mr-1"
            href="/sign-in"
          >
            Log in
          </a>
          <a
            class="anchorLink btn btnSm signUp"
            href="https://about.sourcegraph.com/get-started/self-hosted?utm_medium=inproduct&utm_source=nav&utm_campaign=inproduct-cta"
            tabindex="0"
          >
            Get started
          </a>
        </div>
      </li>
    </ul>
  </nav>
  <div
    class="w-100 px-3 pt-2"
  >
    <div
      class="pb-2 border-bottom"
    >
      <searchnavbaritem
        defaultsearchcontextspec=""
        extensionscontroller="[object Object]"
        history="[object Object]"
        location="[object Object]"
        platformcontext="[object Object]"
        routes=""
        selectedsearchcontextspec=""
        settingscascade="[object Object]"
        telemetryservice="[object Object]"
        themepreference="light"
      />
    </div>
  </div>
</DocumentFragment>
`;
